--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   nginx:
     image: nginx:alpine
@@ -8,7 +6,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./backend:/var/www
+      - ./backend:/var/www # Share code with Nginx for static file serving
     depends_on:
       - backend
       - frontend
@@ -16,28 +14,30 @@ services:
   backend:
     build:
       context: ./backend
-      args:
-        APP_ENV: local
+      target: development # Stops at the 'development' stage in Dockerfile
     container_name: laravel
-    working_dir: /var/www
     volumes:
-      - ./backend:/var/www
-      - ./backend/docker/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
+      - ./backend:/var/www # Syncs your local PHP code
     env_file:
       - ./backend/.env
+    environment:
+      - APP_ENV=local
 
   frontend:
     build:
       context: ./frontend
-      args:
-        NODE_ENV: development
+      # This 'target' matches the 'AS development' stage in your Dockerfile
+      target: development 
     container_name: nuxt
     working_dir: /app
     volumes:
       - ./frontend:/app
-      - /app/node_modules # Prevents host node_modules from overwriting container's
+      - nodemodules:/app/node_modules # Named volume
     environment:
+      - NODE_ENV=development
       - HOST=0.0.0.0
-      - CHOKID_USEPOLLING=true # Helps with Hot Module Replacement in some Docker setups
-    ports:
-      - "3000:3000"
+      - CHOKID_USEPOLLING=true # Essential for hot-reload on some systems
+    #ports:
+     # - "3000:3000"
+volumes:
+  nodemodules:
