--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,36 +1,41 @@
 version: "3.9"
 
 services:
+  # NGINX: The Gatekeeper
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: ./nginx/Dockerfile
     container_name: nginx
     ports:
       - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./nginx/ssl:/etc/nginx/certs:ro
+    # No volumes for code/config; they are baked into the image.
+    # If you eventually add SSL, add the certificate volume here.
     depends_on:
       - backend
       - frontend
     restart: always
 
+  # BACKEND: Laravel (PHP-FPM)
   backend:
     build:
       context: ./backend
-      target: production  # Uses the optimized stage with caches
+      target: production
     container_name: laravel
-    # No volume mount here! The code is inside the image.
+    # This pulls all your secrets from the .env file on your server
     env_file:
-      - ./backend/.env.production
+      - .env
     restart: always
 
+  # FRONTEND: Nuxt (Node/Nitro)
   frontend:
     build:
       context: ./frontend
-      target: production  # Uses the stage that copies .output
+      target: production
     container_name: nuxt
-    # No volume mount here! The .output folder is built into the image.
+    # Nuxt often needs the API URL from the environment
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
     restart: always
