--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,37 +1,33 @@
 server {
     listen 80;
     server_name localhost;
+    
+    # Define the root globally for the server
+    root /var/www/public;
+    index index.php;
 
-    # Nuxt DEV (ALL frontend)
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_http_version 1.1;
-
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $remote_addr;
-
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+    # Laravel API & Sanctum
+    # Using a regex or prefix match to ensure Laravel handles these
+    location ~ ^/(api|sanctum|vendor) {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Laravel API
-    location ^~ /api {
-        root /var/www/public;
-        try_files $uri /index.php?$query_string;
-    }
-
-    location ^~ /sanctum {
-        root /var/www/public;
-        try_files $uri /index.php?$query_string;
-    }
-
+    # PHP-FPM Handler
     location ~ \.php$ {
-        root /var/www/public;
         fastcgi_pass backend:9000;
+        fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    # ❌ REMOVED dangerous dot-blocking
+    # Nuxt DEV (Fallback)
+    # This must come AFTER the API blocks so it doesn't intercept them
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_cache_bypass $http_upgrade;
+    }
 }
